1.1.19/1.0.21 - xxxxxxxxxxxxxxxxx
=================================
* For ZKClient Bridge: 1. Previous method of sending intitial connect event to ZKClient was
unreliable; 2. Added an option to not close the curator instance

* The default connection timeout has increased to 15 seconds. The default session timeout has
increased to 60 seconds. These both can now be overridden via system properties:
"curator-default-connection-timeout" and "curator-default-session-timeout".

1.1.18/1.0.20 - September 4, 2012
=================================
* New extension project: "ZKClient Bridge". A bridge between Curator and ZKClient. Useful for
projects that would like to use Curator but don't want to risk porting working code that uses
ZKClient.

1.1.17/1.0.18 - August 30, 2012
===============================
* Issue 132: If namespace is set in builder, getNamespace() does not return it

* Issue 131: If connection is lost to the server, the ServiceInstance needs to re-register once
there is a re-connection.

* PathChildrenCache was not sending UPDATE messages when a node's data changed in the case
that false was passed in the constructor for cacheData.

* Merge 136 from wt: Add eclipse support to gradle.

* Merge 137 from pbh101: ConnectionState declares IOException, never throws it

1.1.16/1.0.17 - August 2, 2012
==============================
* Merge 114 from amuraru: Make sure internal executor services are not started until startup.

* Merge 116 from samuelgmartinez: Fix for Issue 115: Wrong behaviour in LeaderLatch when a candidate
loses connection

* Issue 118: Ignore nonode exceptions when deleting lock path

* Added a non-reentrant mutex: InterProcessSemaphoreMutex. This mutex doesn't have the threading
restrictions that InterProcessMutex has. This should help with issues 75 and 117.

* Merge 122 from ithaka that addresses Issue #98 - JsonInstanceSerializer does not deserialize