@@ -1,11 +1,17 @@
 1.1.19/1.0.21 - xxxxxxxxxxxxxxxxx
 =================================
-* For ZKClient Bridge: 1. Previous method of sending intitial connect event to ZKClient was
+* For ZKClient Bridge: 1. Previous method of sending initial connect event to ZKClient was
 unreliable; 2. Added an option to not close the curator instance
 
 * The default connection timeout has increased to 15 seconds. The default session timeout has
 increased to 60 seconds. These both can now be overridden via system properties:
 "curator-default-connection-timeout" and "curator-default-session-timeout".
+
+* Thanks to Ben Bangert: the InterProcessSemaphore waiting semantics weren't ideal. The nth
+waiting node has to wait for all nodes in front of it. I've improved this a bit. However, the algorithm
+used still suffers from potential out of order acquisition as well as potential starvation if a given client
+does not release a lease. Therefore, I'm deprecating InterProcessSemaphore in favor of the new
+InterProcessSemaphoreV2 which is based on Ben's algorithm.
 
 1.1.18/1.0.20 - September 4, 2012
 =================================
